--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,28 @@
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 venv/
 .venv/
 pyvenv.cfg
 .pytest_cache/
-
 node_modules/
 dist/
 dist-ssr/
@@ -19,18 +35,22 @@ pnpm-debug.log*
 
 .env
 .env.*
+.env.local
 serviceAccountKey.json
 *.pem
 *.key
+osint_module_backend/serviceAccountKey.json  # Ruta explícita por seguridad
 
-logs/*
-!logs/.gitkeep
+*.pdf
+*.csv
+*.xlsx
 .DS_Store
 Thumbs.db
-
 .vscode/
 .idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+logs/*
+!logs/.gitkeep
